[project]
name = "sqmdemo"
description = "Demo for streaming computation of quadratic manifolds"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "absl-py",
  "h5py",
  "numpy",
  "jaxlib",
  "jax",
  "incsvdpack @ git+ssh://git@github.com/Algopaul/incsvdpack",
  "qmpack @ git+ssh://git@github.com/Algopaul/qmpack",
  "matplotlib"
]

dynamic = ["version"]


[project.optional-dependencies]
dev = [
  "pylint>=2.6.0",
  "yapf"
]

[tool.setuptools]
py-modules = ["sqmdemo"]
